medicare/db_injection/nohup.out
Traceback (most recent call last):
  File "./file_to_db.py", line 7, in <module>
    import config
  File "../config.py", line 6
    data_dir = os.path.abspath(os.path.join(os.path.dirname(__file__',db_injection/data')))
                                                                                       ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "./file_to_db.py", line 7, in <module>
    import config
  File "../config.py", line 6, in <module>
    data_dir = os.path.abspath(os.path.join(os.path.dirname(__file__,'db_injection/data')))
TypeError: dirname() takes exactly 1 argument (2 given)
Year: 1924
Year: 1993
Year: 1964
Year: 1900
Year: 1912
Year: 1950
Year: 1918
Year: 2009
Year: 1914
Year: 1921
Year: 1925
Year: 1949
Year: 1969
Year: 2003
Year: 1902
Year: 1986
Year: 1979
Year: 1922
Year: 1943
Year: 2001
Year: 1939
Year: 1915
Year: 1977
Year: 1940
Year: 1958
Year: 1983
Year: 2010
Year: 1945
Year: 1967
Year: 2004
Year: 1988
Year: 1999
Year: 1919
Year: 1935
Year: 2007
Year: 1959
Year: 1948
Year: 1938
Year: 1909
Year: 1904
Year: 1910
Year: 1971
Year: 1928
Year: 1931
Year: 1934
Year: 1920
Year: 1953
Year: 1917
Year: 1942
Year: 1994
Year: 1989
Year: 1929
Year: 1990
Year: 1913
Year: 1908
Year: 1911
Year: 1995
Year: 1965
Year: 1980
Year: 1974
Year: 1937
Year: 1968
Year: 1926
Year: 2002
Year: 1992
Year: 1956
Year: 1903
Year: 1985
Year: 1982
Year: 1972
Year: 1952
Year: 1947
Year: 1901
Year: 2006
Year: 1932
Year: 1930
Year: 1978
Year: 1905
Year: 1907
Year: 1951
Year: 1987
Year: 1927
Year: 1906
Year: 1961
Year: 1916
Year: 1984
Year: 1946
Year: 2008
Year: 1963
Year: 1981
Year: 1923
Year: 1975
Year: 1998
Year: 2005
Year: 1966
Year: 1997
Year: 1991
Year: 1960
Year: 1955
Year: 1996
Year: 1944
Year: 1973
Year: 1954
Year: 1957
Year: 1941
Year: 1936
Year: 2000
Year: 1962
Year: 1933
Year: 1970
Year: 1976
Year: 2006
Year: 1907
Year: 1990
Year: 1971
Year: 1943
Year: 1961
Year: 1903
Year: 1911
Year: 1906
Year: 1958
Year: 1983
Year: 1976
Year: 1937
Year: 1972
Year: 1902
Year: 1914
Year: 1904
Year: 2004
Year: 1955
Year: 1981
Year: 1968
Year: 1922
Year: 1928
Year: 1973
Year: 1964
Year: 1929
Year: 1978
Year: 1910
Year: 1980
Year: 1949
Year: 1900
Year: 1931
Year: 1960
Year: 1965
Year: 1999
Year: 1947
Year: 1963
Year: 1966
Year: 2005
Year: 1946
Year: 1984
Year: 1950
Year: 1953
Year: 2009
Year: 1989
Year: 1998
Year: 1987
Year: 1957
Year: 1918
Year: 1994
Year: 1979
Year: 1939
Year: 2010
Year: 1967
Year: 2000
Year: 1945
Year: 1969
Year: 1975
Year: 1919
Year: 1912
Year: 1997
Year: 1905
Year: 1920
Year: 1909
Year: 1936
Year: 1913
Year: 1933
Year: 1985
Year: 1988
Year: 2008
Year: 1991
Year: 1951
Year: 1962
Year: 1992
Year: 1941
Year: 1974
Year: 1934
Year: 1986
Year: 1915
Year: 1982
Year: 1995
Year: 1921
Year: 1926
Year: 1927
Year: 1932
Year: 1956
Year: 2007
Year: 1948
Year: 1901
Year: 2001
Year: 1938
Year: 1924
Year: 1977
Year: 1917
Year: 1940
Year: 1993
Year: 1959
Year: 2002
Year: 1954
Year: 1970
Year: 1942
Year: 1925
Year: 1916
Year: 1944
Year: 1930
Year: 1952
Year: 1996
Year: 1923
Year: 1908
Year: 1935
Year: 2003
indexing...
done
